--- a/trunk/LADSArtworkMode/helpWindow.xaml
+++ b/trunk/LADSArtworkMode/helpWindow.xaml
@@ -6,19 +6,45 @@
              mc:Ignorable="d" 
              xmlns:s="http://schemas.microsoft.com/surface/2008"
              xmlns:m="clr-namespace:LADSArtworkMode"
-             d:DesignHeight="1200" d:DesignWidth="1200" Background="Transparent">
+             d:DesignHeight="1200" d:DesignWidth="1200" Background="#80808080">
     <Grid>
-
-        <Canvas Name="mainCanvas" Width="800" Height="600" Background="DarkGray">
-            <Border BorderBrush="DarkBlue" BorderThickness="3">
-                <Canvas Width="800" Height="600" Background="DarkGray">
-                    <TextBlock Name="helpBox" Text="HelpBox" Canvas.Top="0" Canvas.Left="0" Width="80" Height="40" Foreground="DarkBlue" FontSize="18"/>
-                    <TextBlock FontSize="24" Name="text" TextWrapping="Wrap" Canvas.Top="70" Width="700" Canvas.Left="50"/>
-                </Canvas>
-            </Border>
-            <s:SurfaceButton Name="Done" Content="Done" Canvas.Bottom="30" Canvas.Right="30" Width="110" Height="50" FontSize="30" Background="#618276" Click="Done_Click" />
-
+        <Rectangle Name="Background" Width="800" Height="600" HorizontalAlignment="Center" VerticalAlignment="Center" RadiusX="10" RadiusY="10" StrokeThickness="4" Fill="#FFA7C99F" Stroke="Black" />
+        <Canvas Width="800" Height="600">
+            <TextBlock Name="helpBox" Text="Help" Canvas.Top="5" Canvas.Left="5" Foreground="#24524A" FontSize="18" FontWeight="Bold" />
+            <s:SurfaceButton Name="Catalog_SurfaceButton" Content="Catalog Mode" FontSize="25" FontWeight="Bold" Background="#24524A" Canvas.Left="50" Canvas.Top="40" Click="Catalog_SurfaceButton_Click"/>
+            <s:SurfaceButton Name="Artwork_SurfaceButton" Content="Artwork Mode" FontSize="25" FontWeight="Bold" Background="#24524A" Canvas.Left="239" Canvas.Top="40" Click="Artwork_SurfaceButton_Click"/>
+            <Canvas Name="CatalogHelp" Visibility="Collapsed">
+                <TextBlock FontSize="24" TextWrapping="Wrap" Canvas.Top="90" Canvas.Left="50" Width="700" FontWeight="Bold"> 
+                    View pieces based on date of creation and where it has been around the world! Browse the collection. </TextBlock>
+                <TextBlock FontSize="24" TextWrapping="Wrap" Canvas.Top="180" Width="700" Canvas.Left="50"> Things to see: </TextBlock>
+                <TextBlock FontSize="24" TextWrapping="Wrap" Canvas.Top="230" Width="675" Canvas.Left="75">
+                    - Main Browser: Touch and drag or pinch zoom to view the pieces in more detail <LineBreak />
+                    - World Browser: Touch and drag or pinch zoom to see geographical information about a selected piece <LineBreak />
+                    - Filter: Tap filters to change what's displayed in the Main Browser
+                </TextBlock>
+                <TextBlock FontSize="24" TextWrapping="Wrap" Canvas.Top="440" Width="675" Canvas.Left="50">
+                    Tap a selected artwork's enlarged thumbnail to enter Artwork Mode
+                </TextBlock>
+            </Canvas>
+            <Canvas Name="ArtworkHelp" Visibility="Collapsed">
+                <TextBlock FontSize="24" TextWrapping="Wrap" Canvas.Top="90" Canvas.Left="50" Width="700" FontWeight="Bold"> 
+                    View pieces and details, ranging from hotspots and associated media to digital tours. Browse the piece.</TextBlock>
+                <TextBlock FontSize="24" TextWrapping="Wrap" Canvas.Top="180" Width="700" Canvas.Left="50"> Things to see:</TextBlock>
+                <TextBlock FontSize="24" TextWrapping="Wrap" Canvas.Top="230" Width="675" Canvas.Left="75">
+                    - Main Piece: Touch and pinch zoom to move around <LineBreak />
+                    - Tools: Drag sliders to see what can't be seen with the unaided human eye <LineBreak />
+                    - Hotspots: Tap to see media and content associated with specific parts of an image <LineBreak />
+                    - Associated Media: Tap to browse images and media closely associated with the current piece <LineBreak />
+                    - Tour: View a digital tour (if available for the piece).
+                </TextBlock>
+                <TextBlock FontSize="24" TextWrapping="Wrap" Canvas.Top="500" Width="675" Canvas.Left="50">
+                    Tap Catalog to return to Catalog mode
+                </TextBlock>
+            </Canvas>
+            
+            <s:SurfaceButton Name="Done" Content="Done" Canvas.Bottom="30" Canvas.Right="30" Width="110" Height="50" HorizontalContentAlignment="Center" FontSize="30" Background="#24524A" Click="Done_Click" />
         </Canvas>
 
+        
     </Grid>
 </UserControl>
