--- a/LADSArtworkMode/ArtworkModeWindow.xaml
+++ b/LADSArtworkMode/ArtworkModeWindow.xaml
@@ -44,7 +44,7 @@
         <s:SurfaceListBox Name="SectionListBoxMaster" Visibility="Collapsed" Height="135"/>
         
         
-        <s:ScatterView Name="MainScatterView" MinHeight="1080" Width="1920" Canvas.ZIndex="400"  ></s:ScatterView>
+        <s:ScatterView Name="MainScatterView" MinHeight="1080" Width="1920" Canvas.ZIndex="400" ></s:ScatterView>
 
         <Canvas Name="ImageArea" Height="1080" Width="1920" Canvas.ZIndex ="-1" PreviewTouchDown="ImageArea_PreviewTouchDown" PreviewTouchUp="ImageArea_PreviewTouchUp"> <!-- Background="#ccd6c1" -->
 
@@ -119,9 +119,9 @@
         </s:SurfaceButton>-->
 
 
-        <DockPanel Name="BottomPanel" Opacity=".9" Canvas.Top="864" Background="#5e5e5e" Height="216" Width="1920" Canvas.ZIndex ="100">
+        <DockPanel Name="BottomPanel" Opacity=".8" Canvas.Top="864" Background="#00005e" Height="216" Width="1920" Canvas.ZIndex ="100">
  
-            <Grid Name="NavPanel" Background="#1e1e1e" DockPanel.Dock="Left" Width="384" Height="216">
+            <Grid Name="NavPanel" Background="#000040" DockPanel.Dock="Left" Width="384" Height="216">
                 <!-- zoom navigator -->
                 <Grid Margin="20, 20, 20, 20" Background="Black" ClipToBounds="True" Name="ThumbGrid">
                     <dz:MultiScaleImage Name="msi_thumb" />
@@ -141,7 +141,7 @@
             </Grid>
             <DockPanel DockPanel.Dock="Right">
                 
-                  <Canvas Name="collapseBar" Width="1536" HorizontalAlignment="Stretch" Background="#002745" DockPanel.Dock="Top" Visibility="Visible" IsHitTestVisible="True" Canvas.ZIndex="20">
+                  <Canvas Name="collapseBar" Width="1536" HorizontalAlignment="Stretch" Background="#0000ee" DockPanel.Dock="Top" Visibility="Visible" IsHitTestVisible="True" Canvas.ZIndex="20">
                     <s:SurfaceButton Name="collapseButtonBg" Width="1536" Background="Transparent" DockPanel.Dock="Top" Height="30" HorizontalAlignment="Stretch"  Click="BottomButtonClick" />
                       <Canvas Name="collapseButtonDown" Visibility="Visible" DockPanel.Dock="Top" Height="30" >
                         <s:SurfaceButton  Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="600" VerticalAlignment="Center" HorizontalContentAlignment="Center" Click="BottomButtonClick" >
@@ -194,7 +194,7 @@
 
                 </Canvas>
 
-                <Canvas x:Name="textBar" DockPanel.Dock="Top" Background="#002745" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="30" MouseUp="BottomButtonClick" TouchUp="BottomButtonClick">
+                <Canvas x:Name="textBar" DockPanel.Dock="Top" Background="#0000ee" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="30" MouseUp="BottomButtonClick" TouchUp="BottomButtonClick">
                     <TextBlock Name="textMessage" Foreground="White" Text="Bar cannot be docked during a tour" Opacity="0" FontSize="16" Canvas.Top="2"/>
                     <TextBlock Name="verticalMessage" Foreground="White" Text="Toolbar cannot be opened during a tour" Opacity="0" FontSize="16" Canvas.Top="2"/>
                 </Canvas>
@@ -212,9 +212,9 @@
         <Canvas Name="tourAuthoringUICanvas" Width="1920" Height="216" Canvas.Top="864" ClipToBounds="True" Canvas.ZIndex ="100"></Canvas>
         <!-- tour authoring UI canvas -->
 
-        <DockPanel Name="LeftPanel" Opacity=".9" Canvas.Top="0" Canvas.Left="0" Height="864" Width="384" Background="#2e2e2e" Canvas.ZIndex="99"> <!--Background="#618276"-->
+        <DockPanel Name="LeftPanel" Opacity=".9" Canvas.Top="0" Canvas.Left="0" Height="864" Width="384" Background="#000070" Canvas.ZIndex="99"> <!--Background="#618276"-->
 
-            <s:SurfaceButton Name="leftButton" VerticalAlignment="Stretch" HorizontalAlignment="Center" Background="#002745" Click="LeftButtonClick" DockPanel.Dock="Right">
+            <s:SurfaceButton Name="leftButton" VerticalAlignment="Stretch" HorizontalAlignment="Center" Background="#0000ee" Click="LeftButtonClick" DockPanel.Dock="Right">
                 <Canvas>
                     <Canvas Name="collapseButtonRight" Visibility="Hidden"  >
                         <s:SurfaceButton Height="30" Width="30" MinHeight="0" Background="Transparent" Canvas.Left="0">
@@ -238,13 +238,13 @@
                
             </s:SurfaceButton>
             
-            <StackPanel Name="leftPaneContent" Background="#2e2e2e" DockPanel.Dock="Right"> <!-- Background="#618276"-->
+            <StackPanel Name="leftPaneContent" Background="#000070" DockPanel.Dock="Right"> <!-- Background="#618276"-->
                 <Canvas Name="Tools" 
                         Height="{Binding Height, ElementName=SectionBoxMaster}"
                         MinHeight="{Binding Height, ElementName=SectionBoxMaster}"
                         MaxHeight="{Binding Height, ElementName=SectionBoxMaster}"
                         Width="{Binding Width, ElementName=SectionBoxMaster}" 
-                        Background="#2e2e2e"> <!-- Background="#618276"-->
+                        Background="#000070"> <!-- Background="#618276"-->
 
                     <Label Content="Tools"
                            FontSize="{Binding FontSize, ElementName=SectionTitlesMaster}"
@@ -468,12 +468,12 @@
         </DockPanel>
 
 
-        <DockPanel Name="AuthLeftPanel" Opacity=".9" Canvas.Top="0" Canvas.Left="0" Height="864" Width="384" Background="#2e2e2e" Visibility="Hidden" Canvas.ZIndex="99">
+        <DockPanel Name="AuthLeftPanel" Opacity=".9" Canvas.Top="0" Canvas.Left="0" Height="864" Width="384" Background="#000070" Visibility="Hidden" Canvas.ZIndex="99">
 
-            <s:SurfaceButton VerticalAlignment="Stretch" HorizontalAlignment="Right" Width="30" Background="#2e2e2e" DockPanel.Dock="Right" Click="LeftButtonAuthClick">
+            <s:SurfaceButton VerticalAlignment="Stretch" HorizontalAlignment="Right" Width="30" Background="#000070" DockPanel.Dock="Right" Click="LeftButtonAuthClick">
             </s:SurfaceButton>
 
-            <StackPanel Name="authPanelContent" Background="#1e1e1e" DockPanel.Dock="Right">
+            <StackPanel Name="authPanelContent" Background="#000070" DockPanel.Dock="Right">
                 <!--<Canvas Name="AuthTools" 
                         Height="{Binding Height, ElementName=SectionBoxMaster}"
                         MinHeight="{Binding Height, ElementName=SectionBoxMaster}"
@@ -486,7 +486,7 @@
                         MinHeight="{Binding Height}"
                         MaxHeight="{Binding Height}"
                         Width="{Binding Width}" 
-                        Background="#2e2e2e">
+                        Background="#000070">
 
                     <Label Content="Tour Authoring Tools"
                            FontSize="{Binding FontSize, ElementName=SectionTitlesMaster}"
@@ -520,21 +520,21 @@
         
         <s:SurfaceButton Name="exitButton" Content="QUIT" Background="Red" Opacity=".5" Width="48" Height="30" MinHeight="0" Padding="0 2 0 0" Canvas.Right="20" Click="ExitButton_Click" Canvas.ZIndex="100" HorizontalContentAlignment="Center"/>
         <s:SurfaceButton Name="quitButton" Content="QUIT" Background="Red" Opacity=".5" Width="48" Height="30" MinHeight="0" Padding="0 2 0 0" Canvas.Right="20" Click="ExitButton_Click" Canvas.ZIndex="100" Visibility="Collapsed"/>
-        <Border Name="TimeBorder" BorderBrush="#1e1e1e" Visibility ="Collapsed" BorderThickness="4" CornerRadius="4" Canvas.Bottom="50" Canvas.Left="50" Width="300" Height="150" Canvas.ZIndex="100">
+        <Border Name="TimeBorder" BorderBrush="#000070" Visibility ="Collapsed" BorderThickness="4" CornerRadius="4" Canvas.Bottom="50" Canvas.Left="50" Width="300" Height="150" Canvas.ZIndex="100">
             <Canvas Visibility="Collapsed" Background="#5e5e5e" Name="TourLengthBox">
                 <Label>Change Tour Length</Label>
                 <s:SurfaceTextBox Height="30" Width="50" Name="TourLengthTextBox" Canvas.Left="40" Canvas.Top="50" FontSize="20">60</s:SurfaceTextBox>
                 <Label Canvas.Top="50" Canvas.Left="90">Seconds</Label>
                 <Label Name="shortTimeLabel" Canvas.Top="20" FontSize="14" Visibility="Hidden">Events will be lost - choose longer duration</Label>
-                <s:SurfaceButton Canvas.Bottom="5" Canvas.Right="5" Name="applyTimeTourButton" Background="#002745" Click="applyTimeTourButton_Click">
+                <s:SurfaceButton Canvas.Bottom="5" Canvas.Right="5" Name="applyTimeTourButton" Background="#0000ee" Click="applyTimeTourButton_Click">
                     Apply
                 </s:SurfaceButton>
-                <s:SurfaceButton Canvas.Bottom="5" Canvas.Left="5" Name="cancelTimeTourButton" Background="#002745" Click="cancelTimeTourButton_Click">
+                <s:SurfaceButton Canvas.Bottom="5" Canvas.Left="5" Name="cancelTimeTourButton" Background="#0000ee" Click="cancelTimeTourButton_Click">
                     Cancel
                 </s:SurfaceButton>
             </Canvas>
         </Border>
-        <Border Name="RenameBorder" BorderBrush="#1e1e1e" Visibility ="Collapsed" BorderThickness="4" CornerRadius="4" Canvas.Bottom="200" Canvas.Left="200" Width="250" Height="150" Canvas.ZIndex="100">
+        <Border Name="RenameBorder" BorderBrush="#000070" Visibility ="Collapsed" BorderThickness="4" CornerRadius="4" Canvas.Bottom="200" Canvas.Left="200" Width="250" Height="150" Canvas.ZIndex="100">
             <Canvas Visibility="Collapsed" Background="#5e5e5e" Name="renameTimelineBox" >
 
                 <Label>Type New Name</Label>
@@ -543,10 +543,10 @@
                 </s:SurfaceTextBox>
 
 
-                <s:SurfaceButton Canvas.Bottom="5" Canvas.Right="5" Name="applyRenameTimelineButton" Background="#002745">
+                <s:SurfaceButton Canvas.Bottom="5" Canvas.Right="5" Name="applyRenameTimelineButton" Background="#0000ee">
                     Apply
                 </s:SurfaceButton>
-                <s:SurfaceButton Canvas.Bottom="5" Canvas.Left="5" Name="cancelRenameTimelineButton" Background="#002745">
+                <s:SurfaceButton Canvas.Bottom="5" Canvas.Left="5" Name="cancelRenameTimelineButton" Background="#0000ee">
                     Cancel
                 </s:SurfaceButton>
 
@@ -555,7 +555,7 @@
         <ae:helpWindow x:Name="helpWindow" Visibility="Hidden" />
 
 
-        <Border Name="imageInfoBorder" CornerRadius="5" HorizontalAlignment="Right" VerticalAlignment="center" BorderThickness="4" BorderBrush="#1e1e1e" Background="#2e2e2e" Canvas.Top="0" Canvas.Left="768" Width="384" Height="360">
+        <Border Name="imageInfoBorder" CornerRadius="5" HorizontalAlignment="Right" VerticalAlignment="center" BorderThickness="4" BorderBrush="#0000ee" Background="#000070" Canvas.Top="0" Canvas.Left="768" Width="384" Height="360">
             <!-- OLD: Background = "#FFA7C99F" OLD2: Background="#99310ABA" BorderBrush="Black" -->
             <Grid>
                 <Grid.RowDefinitions>
@@ -563,7 +563,7 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0" Width="384" Height="40" Margin="0 0 0 10" Text="Image Info" Foreground="White" FontSize="22" TextAlignment="Center"  Background="#2e2e2e" PreviewMouseUp="imageInfo_mousedown" PreviewTouchUp="imageInfo_touchdown"/>
+                <TextBlock Grid.Row="0" Width="384" Height="40" Margin="0 0 0 10" Text="Image Info" Foreground="White" FontSize="22" TextAlignment="Center"  Background="#000070" PreviewMouseUp="imageInfo_mousedown" PreviewTouchUp="imageInfo_touchdown"/>
 
                 <s:SurfaceScrollViewer Grid.Row="1" x:Name="infoScroll"  Height="300" VerticalScrollBarVisibility="Auto"  HorizontalScrollBarVisibility="Disabled" VerticalAlignment="Top">
                     <Grid Name="curInfoCol" VerticalAlignment="Top">
@@ -579,7 +579,7 @@
                             <ColumnDefinition Name="curInfoCol_0" Width="379" />
                         </Grid.ColumnDefinitions>
 
-                        <Rectangle Name="titleBack" Grid.Row="0" Grid.Column="0" Fill="#1e1e1e" Margin="10,0,10,0" />
+                        <Rectangle Name="titleBack" Grid.Row="0" Grid.Column="0" Fill="#000070" Margin="10,0,10,0" />
                         <!-- Fill ="#24524A" -->
                         <TextBlock Name="title" Grid.Row="0" Grid.Column="0" Text="" Foreground="White" TextAlignment="Left" FontSize="20" Margin="15,0,0,0" ></TextBlock>
                         <TextBlock Name="artist" Grid.Row="1" Grid.Column="0" Text="" Foreground="White" TextAlignment="Left" FontSize="20" Margin="15,0,0,0"/>
@@ -589,11 +589,11 @@
                         <TextBlock Name="category" Grid.Row="3" Grid.Column="0" Text="" Foreground="White" TextAlignment="Left" FontSize="20" Margin="15,0,0,0"/>
                         <TextBlock Name="medium" Grid.Row="4" Grid.Column="0" Text=""  Foreground="White" TextAlignment="Left" FontSize="20" Margin="15,0,0,0"/>
                         <!-- Foreground="Black" -->
-                        <Rectangle Name="KeywordBack" Grid.Row="5" Grid.RowSpan="2" Grid.Column="0" Fill ="#2e2e2e" Margin="10,0,10,0"/>
-                        <TextBlock  Name="KeywordsTitle" Grid.Row="5" Grid.Column="0" Visibility="Hidden" Text="Keywords:" Foreground="White" TextAlignment="Center" FontSize="18" Margin="15,0,0,0" Background="#2e2e2e"></TextBlock>
+                        <Rectangle Name="KeywordBack" Grid.Row="5" Grid.RowSpan="2" Grid.Column="0" Fill ="#000070" Margin="10,0,10,0"/>
+                        <TextBlock  Name="KeywordsTitle" Grid.Row="5" Grid.Column="0" Visibility="Hidden" Text="Keywords:" Foreground="White" TextAlignment="Center" FontSize="18" Margin="15,0,0,0" Background="#000070"></TextBlock>
                         <!-- jcchin: added background -->
 
-                        <TextBlock  Name="curKeywords" Text=""  Visibility="Hidden" TextAlignment="Left" FontSize="18" Margin="15,10,15,0" Grid.Row="6" Grid.Column="0" Background="#2e2e2e" Foreground="#99cceb"></TextBlock>
+                        <TextBlock  Name="curKeywords" Text=""  Visibility="Hidden" TextAlignment="Left" FontSize="18" Margin="15,10,15,0" Grid.Row="6" Grid.Column="0" Background="#000070" Foreground="#99cceb"></TextBlock>
                         <!-- Foreground="White" -->
 
                     </Grid>
