--- a/trunk/LADSArtworkMode/HotspotDetailsControl.xaml
+++ b/trunk/LADSArtworkMode/HotspotDetailsControl.xaml
@@ -10,7 +10,7 @@
              xmlns:my="http://schemas.microsoft.com/surface/2008" xmlns:System_Windows_Documents="clr-namespace:System.Windows.Documents;assembly=PresentationUI" 
              x:Class="LADSArtworkMode.HotspotDetailsControl" 
                        
-        Name="scatterItem" CanScale="True" Height="320" Width="422" MinWidth="400" MinHeight="320" Loaded="scatterItem_Loaded" Orientation="0" SizeChanged="scatterItem_SizeChanged">
+        Name="scatterItem" CanScale="True" Height="320" Width="422" MinWidth="400" MinHeight="320" MaxHeight="615" MaxWidth="800" Loaded="scatterItem_Loaded" Orientation="0" SizeChanged="scatterItem_SizeChanged">
     <Border BorderBrush="#214236" BorderThickness="4" CornerRadius="4" Name="border">
         <Canvas Name="hotspotCanvas" Background="#618276" Opacity="0.95">
            
@@ -24,15 +24,16 @@
                 <UserControl Name="video"></UserControl>
                 
             </Canvas> 
-            <StackPanel Name="VideoStackPanel">
-                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                    <s:SurfaceButton Name="SurfacePlayButton" Content ="Play/Pause" Width="80" Height="20" Click="SurfacePlayButton_Click" Margin="5">
-                    </s:SurfaceButton>
-                    <s:SurfaceSlider Name="SurfaceTimelineSlider" Margin="5" ValueChanged="SurfaceTimelineSlider_ValueChanged"  Width="70"/>
+            <Canvas Name="videoCanvas2">
+                <StackPanel Name="VideoStackPanel">
+                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                        <s:SurfaceButton Name="SurfacePlayButton" Content ="Play/Pause" Width="80" Height="20" Click="SurfacePlayButton_Click" Margin="5">
+                        </s:SurfaceButton>
+                        <s:SurfaceSlider Name="SurfaceTimelineSlider" Margin="5" ValueChanged="SurfaceTimelineSlider_ValueChanged"  Width="70"/>
+                    </StackPanel>
+                    <Label Name="VideoText" VerticalAlignment="Bottom" Foreground="White" Background="Transparent" />
                 </StackPanel>
-                <Label Name="VideoText" VerticalAlignment="Bottom" Foreground="White" Background="Transparent" />
-            </StackPanel>
-            
+            </Canvas>
             <DockPanel Name="AudioMix" Visibility="Visible" DockPanel.Dock="Top">
                 <StackPanel Name="AudioScroll" Height="272" Width="340" Background="#618276" Margin="0,40" Canvas.Left="12" Visibility="Hidden" DockPanel.Dock="Top">
 
